[package]
name = "chromecast-tokio"
description = "Communicate asynchronously with Google Cast enabled devices (e.g. Chromecast)."
# documentation = "https://docs.rs/crate/rust_cast/"
# homepage = "https://github.com/azasypkin/rust-cast"
# repository = "https://github.com/tsirysndr/rust-cast"
license = "MIT"
keywords = ["cast", "chromecast", "google", "tokio", "async"]
version = "0.18.2"
# authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
categories = ["api-bindings", "hardware-support", "multimedia"]
edition = "2021"
exclude = [
    ".github/*",
    "examples/*",
    "protobuf/*",
    "README.md",
]

[[example]]
name = "rust_caster"
path = "examples/rust_caster.rs"

[[example]]
name = "chromecast-async-cli"
path = "examples/chromecast_async_cli.rs"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.4.3"
bytes = "1.5.0"
function_name = "0.3.0"
futures = "0.3.30"
futures-concurrency = "7.4.3"
log = "0.4.17"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
pin-project-lite = "0.2.13"
protobuf = "=3.2.0"
rustls = { version = "0.22.2", features = [] }

# This version restriction avoids the versions that included a pre-built
# binary for serde_derive.
serde = { version = ">=1.0.184", features = ["derive"] }

serde_json = "1.0.93"
tokio = { version = "1.0", features = ["io-std", "io-util", "macros", "net", "parking_lot", "rt", "rt-multi-thread", "sync", "time", "tracing"] }
tokio-rustls = "0.25.0"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec", "time", "tracing"] }
tracing = { version = "0.1.40", features = ["attributes", "valuable"] }
valuable = { version = "0.1.0", features = ["derive"] }
webpki-roots = "0.22.6"

[dev-dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.0", features = ["derive"] }
docopt = "1.1.1"
env_logger = "0.10.0"

tracing-bunyan-formatter = { version = "0.3.7", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "time"] }

[build-dependencies]
protobuf-codegen = "=3.2.0"

[features]
default = ["thread_safe"]
thread_safe = []
